# sift

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Justfile  README.md  deny.toml  test_cast  test_cast2
.auto/: ideas.md  log.jsonl  measure.sh  prompt.md
decisions/adrs/: 0001-rust-brush-parser.md  0002-minimal-posix-shell.md  0003-compiled-rust-plugins.md  0004-sqlite-sqlx-session-store.md  0005-std-process-command-for-exec.md  0006-separate-sift-cache-table.md  0007-stderr-capture-pipes.md  0008-reset-plugin.md
decisions/standards/: STD-001-rust-code-quality.md  STD-002-project-layout.md  STD-003-plugin-architecture.md  STD-004-session-store-schema.md  STD-005-exec-api.md  STD-006-sift-cache-schema.md  STD-007-cache-interface.md
docs/examples/: cargo_test.lua  cat.lua
integrations/pi/: sift.ts
openspec/: config.yaml
openspec/changes/archive/2026-07-15-diff-via-similar/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-15-log-redesign/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-15-plugin-optionalization-and-optimization/: proposal.md  tasks.md
openspec/changes/archive/2026-07-15-sift-read-and-content-store/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-15-streaming-output/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-16-fix-empty-diff-return/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-16-fix-message-and-extension/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-16-range-aware-cache/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-16-sed-head-tail-plugins-and-pi-extension/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-18-fix-gain-recording/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-18-fix-read-cache-and-streaming/: design.md
openspec/changes/archive/2026-07-18-fix-sift-gain/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-18-fix-str-api-and-test-plugins/: proposal.md  tasks.md
openspec/changes/archive/2026-07-18-rtk-wildcard-integration/: design.md
openspec/changes/archive/2026-07-18-streaming-stdin-and-builtins/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-18-stronger-nudge-and-dedup/: design.md  proposal.md
openspec/changes/archive/2026-07-18-toon-full-api/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-18-wildcard-fallback-fix/: proposal.md
openspec/changes/archive/2026-07-19-git-commit-hook-and-curl-optimizer/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-19-shlex-and-nudge-message/: tasks.md
openspec/changes/archive/2026-07-19-stderr-redirect-and-transform/: design.md  proposal.md  tasks.md
openspec/changes/baish-initial-implementation/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/baish-pty-architecture/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/fix-gain-tracking/: tasks.md
openspec/changes/fix-read-cache-and-streaming/: proposal.md  tasks.md
openspec/changes/fix-str-api-and-test-plugins/: design.md  tasks.md
openspec/changes/improve-gain-report/: design.md  proposal.md
openspec/changes/plugin-optionalization-and-optimization/: design.md  tasks.md
openspec/changes/rtk-wildcard-integration/: proposal.md  tasks.md
openspec/changes/shlex-and-nudge-message/: design.md  proposal.md  tasks.md
openspec/changes/sift-args-parse/: proposal.md  tasks.md
openspec/changes/sift-ext-xberg/: design.md  proposal.md
openspec/changes/sift-gain/: proposal.md  tasks.md
openspec/changes/sift-gain/specs/gain/: spec.md
openspec/changes/sift-lua-plugin-system/: design.md  proposal.md  tasks.md
openspec/changes/stronger-nudge-and-dedup/: tasks.md
openspec/changes/wildcard-fallback-fix/: design.md  tasks.md
openspec/specs/classifier-simplify/: spec.md
openspec/specs/ctx-first-api/: spec.md
openspec/specs/dedup/: spec.md
openspec/specs/diff-api/: spec.md
openspec/specs/extension-notifications/: spec.md
openspec/specs/gain-report-formatting/: spec.md
openspec/specs/head-plugin/: spec.md
openspec/specs/json-shortest/: spec.md
openspec/specs/log-level-methods/: spec.md
openspec/specs/nudge/: spec.md
openspec/specs/nudge-system/: spec.md
openspec/specs/nudge-top-level/: spec.md
openspec/specs/openspec-plugin/: spec.md
openspec/specs/output-storage/: spec.md
openspec/specs/path-hash-tracking/: spec.md
openspec/specs/pipeline-optimization/: spec.md
openspec/specs/plugin-optionalization/: spec.md
openspec/specs/plugin-system/: spec.md
openspec/specs/plugin-tests/: spec.md
openspec/specs/read-tool/: spec.md
openspec/specs/redirects/: spec.md
openspec/specs/regression-tests/: spec.md
openspec/specs/rtk-plugin/: spec.md
openspec/specs/sift-api/: spec.md
openspec/specs/sift-read-diff/: spec.md
openspec/specs/spawnhook/: spec.md
openspec/specs/store-primitive/: spec.md
openspec/specs/str-builtins/: spec.md
openspec/specs/streaming/: spec.md
openspec/specs/streaming-exec/: spec.md
openspec/specs/streaming-stdin/: spec.md
openspec/specs/streaming-transform/: spec.md
openspec/specs/wildcard-fallback/: spec.md
openspec/specs/wildcard-plugin/: spec.md
plugins/: cargo-crap.lua  cargo-llvm-cov.lua  cargo-machete.lua  cat.lua  curl.lua  git-commit.lua  git_status.lua  head.lua  openspec.lua  rtk.lua  sed.lua  sift-read.lua  tail.lua
sift/: Cargo.toml
sift-core/: Cargo.toml
sift-core/src/: classifier.rs  lib.rs  lua.rs  session.rs
sift-core/src/lua/: api.rs  api_reg_args.rs  api_reg_cache.rs  api_reg_ext.rs  api_reg_io.rs  exec.rs  mod.rs  stdin_reader.rs  tests.rs  tests_plugins.rs
sift-core/src/lua/tests/: tests_cache.rs
sift/benches/: bench_throughput.rs
sift/plugins/: bash.lua  cat.lua  command.lua  git_status.lua  reset.lua
sift/src/: main.rs  pty.rs
src/: builtins.rs  dispatcher.rs  main.rs  parser.rs  plugin.rs  session.rs
src/plugins/: cat.rs  mod.rs
(+95 files in other folders)
