[workspace]
resolver = "2"
members = ["sift-core", "sift"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
dirs = "5"
hex = "0.4"
md-5 = "0.10"
sha2 = "0.10"
mlua = { version = "0.10", features = ["lua54", "send", "serialize", "async"] }
tempfile = "3"
toon-format = "0.4"
jaq-parse = "1"
jaq-syn = "1"
jaq-interpret = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-util", "io-std", "process"] }
