[package]
name = "sift-core"
version = "0.1.0"
edition = "2021"
description = "Core types and runtime for sift — AI-optimized shell proxy"

[package.metadata.cargo-machete]
ignored = ["md-5", "serde"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
brush-parser = "0.4"
hex = { workspace = true }
md-5 = { workspace = true }
mlua = { workspace = true }
portable-pty = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { workspace = true }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
