[package]
name = "sift"
version = "0.1.0"
edition = "2021"
description = "AI-optimized shell proxy — Lua-plugin-based command interception and output optimization"

[[bin]]
name = "sift"
path = "src/main.rs"

[[bench]]
name = "bench_throughput"
path = "benches/bench_throughput.rs"
harness = false

[package.metadata.cargo-machete]
ignored = ["chrono", "hex", "mlua", "sha2"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = { workspace = true }
hex = { workspace = true }
mlua = { workspace = true }
sha2 = { workspace = true }
sift-core = { path = "../sift-core" }
tokio = { workspace = true, features = ["process", "io-util"] }

[features]
html-md = ["sift-core/html-md"]
xberg = ["sift-core/xberg"]
mdmin = ["sift-core/mdmin"]

[dev-dependencies]
tempfile = { workspace = true }
